    only the "qseq66" client.
  - Saving via a remote NSM Save command or by the File / Save menu
    would not clear the modified flag.
  - Closing the session would not remove any external editor windows.
- Some automation actions need to work whether the action is "on" or
  "toggle". Fixed these 'ctrl' actions:
  - Save session (under NSM) or the MIDI file.
  - Record style select.
  - Quit.

### Added

- Added 120 PPQN to the list of supported PPQNs.
- Added a "config directory" macro to configure.ac and seq-feature
  functions to access it. Differentiates between client and directory
  name.

## [0.99.15]

### Added

- Added edit fields and buttons for selecting a non-default browser
  or PDF viewer to the Preference's Session tab.

### Fixed

- Some font handling in the various tabs and windows.
- Cleaned up the configuration dialogs.
- The file-selection dialog(s) when no file-extension is used.
- An error in getting the name of the mutes file in the Preference's
  Session tab.

### Changed

- Updating configure.ac to disable, and not allow enabling, of JACK,
  NSM, and liblo (OSC) if libraries not installed.
- Progress made getting a build to work in MSYS2. Not yet ready.
- Built on Windows 11 with a update to Qt 5.15.2 and mingw 8.10.

## [0.99.14]

### Added

- Added the use of the Esc key to close the external song editor window
  if not playing and not in adding mode. Similar to the fix made to
  the pattern editor for issue #117.
- Added the elliptical progress-box option to Preferences / Display.
- In the pattern editor, a tiny unlabelled button toggles the
  showing of note information when the mouse hovers over a note.
- Added a note-tooltip option. Click the unlabelled button at the left of the
  horizontal scroll-bar. Then hovering over a note shows some note information.

### Fixed

- In the zoomer class, rearranged members to avoid a warning (error)
  from g++ v. 14.2.1 about zoom being uninitialized in the constructor.