@@ -1,10 +1,10 @@
-Release Notes for Seq66 v. 0.99.16 2024-11-08
+Release Notes for Seq66 v. 0.99.16 2024-11-10
 
 Fixes for NSM (session manager), build-file updates, and better PPQN
 handling.
 
 - Merged a fix from a pull request (issue #130) to update the
-  *.desktop files.
+  "*.desktop" files.
 - Fixed issue #131 re faulty NSM interactions introduced in version
   0.99.11, plus other related issues:
   - NSM (agordejo or nsm-legacy-gui) would show two clients: "qseq66"
@@ -20,6 +20,10 @@ handling.
 - Fixed the display of tunes with various PPQNs such as 120 in the
   pattern editor.
 - Added 120 PPQN to the list of supported PPQNs.
+- Fixed File / New plus File Save overwriting the previous loaded
+  file.
+- The main window now reflects the current record-loop style and
+  new-pattern option as read from the 'usr' file.
 - Added CONFIG\_DIR\_NAME and cleaned up configure.ac. This macro
   differentiates between client name and config directory name.
   Updated the Makefile sources. Do "./bootstrap --full-clean".
