@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2021-01-18
-% \update      2024-11-08
+% \update      2024-11-10
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -1582,6 +1582,8 @@
       window-scale-y = 1
       enable-learn-confirmation = true
    \end{verbatim}
+
+   Note that some themes will not respect the time-color options.
 
    \texttt{swap-coordinates} allows for an alternate mapping of pattern
    numbers.  (Later, it will also apply to mappings for set-numbers and
